autocommit
Took 11 hours 54 minutes